[workspace.package]
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
license = "MIT"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/mlaa_egui",
    "crates/mlaa_image",
    "crates/mlaa_impl",
]

[workspace.dependencies]
mlaa_impl = { path = "crates/mlaa_impl" }
