[package]
name    = "mlaa_egui"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
mlaa_impl = { workspace = true }
eframe    = { version   = "0.22.0", features = ["glow", "default_fonts"], default-features = false }
