[package]
name    = "mlaa_image"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
mlaa_impl = { workspace = true,    features = ["serde"]  }
clap      = { version   = "4.4.1", features = ["derive"] }
image     = { version   = "0.24.7" }
smol-rgb  = { version   = "0.3.0"  }
toml      = { version   = "0.7.5"  }
